Archive2/78/f709299fdd902a/output
main.cpp: In function 'int main()':
main.cpp:6:5: error: 'cout' is not a member of 'std'
     std::cout << "hell" << std::endl;
     ^
main.cpp:6:28: error: 'endl' is not a member of 'std'
     std::cout << "hell" << std::endl;
                            ^
