Archive2/78/f709299fdd902a/main.cpp
#include<stdio.h>

int main()
{
    
    std::cout << "hell" << std::endl;
}
